force-app/main/default/objects/Form_LCF_Previous_App_1__c/Form_LCF_Previous_App_1__c.object-meta.xml
<CustomObject>
    <description>Life Chances Fund - Expression of Interest: Previous Applications - 1.0</description>
    <label>Form LCF Previous App 1.0</label>
    <nameField>
        <displayFormat>PAP-{00000}</displayFormat>
        <label>Form ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form LCF Previous Apps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>