force-app/main/default/objects/Form_LCF_Previous_App_1__c/fields/application__c.field-meta.xml
<CustomField>
    <fullName>application__c</fullName>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>Form LCF Previous App 1.0</relationshipLabel>
    <relationshipName>previous_apps</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>