force-app/main/default/objects/Form_LCF_Previous_App_1__c/fields/eoi__c.field-meta.xml
<CustomField>
    <fullName>eoi__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form LCF EOI 1.0</label>
    <referenceTo>Form_LCF_EOI_1__c</referenceTo>
    <relationshipLabel>Form LCF Previous App 1.0</relationshipLabel>
    <relationshipName>eoi_previous_applications</relationshipName>
    <type>Lookup</type>
</CustomField>