force-app/main/default/objects/Form_LCF_Previous_App_1__c/fields/pa_project_name__c.field-meta.xml
<CustomField>
    <fullName>pa_project_name__c</fullName>
    <inlineHelpText>Name of the project</inlineHelpText>
    <label>PA - Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>