force-app/main/default/objects/Form_LCF_Previous_App_1__c/fields/pa_reasons_not_successful__c.field-meta.xml
<CustomField>
    <fullName>pa_reasons_not_successful__c</fullName>
    <inlineHelpText>What were the reasons it was not successful?</inlineHelpText>
    <label>PA - Reasons Not Successful</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>