force-app/main/default/objects/Form_LCF_Previous_App_1__c/fields/pa_successful__c.field-meta.xml
<CustomField>
    <fullName>pa_successful__c</fullName>
    <inlineHelpText>Was it successful?</inlineHelpText>
    <label>PA - Successful</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>